@@ -56,7 +56,7 @@ LINK32=link.exe
 # ADD LINK32 MSVCRT.LIB MSVCPRT.LIB kernel32.lib xerces-c_2.lib python23.lib coin2.lib qt-mtnc321.lib qui.lib soqt1.lib opengl32.lib user32.lib /nologo /dll /machine:I386 /nodefaultlib
 # Begin Special Build Tool
 SOURCE="$(InputPath)"
-PostBuild_Cmds=xcopy       /y       /f       Release\FreeCADGui.dll       ..\..\bin\      	xcopy       /y       /f       Release\FreeCADGui.lib       ..\..\lib\ 
+PostBuild_Cmds=xcopy        /y        /f        Release\FreeCADGui.dll        ..\..\bin\       	xcopy        /y        /f        Release\FreeCADGui.lib        ..\..\lib\ 
 # End Special Build Tool
 
 !ELSEIF  "$(CFG)" == "FreeCADGui - Win32 Debug"
@@ -86,7 +86,7 @@ LINK32=link.exe
 # ADD LINK32 MSVCRTD.LIB MSVCPRTD.LIB kernel32.lib xerces-c_2.lib python23_d.lib coin2d.lib qt-mtnc321.lib qui.lib soqt1d.lib opengl32.lib user32.lib /nologo /dll /debug /machine:I386 /nodefaultlib /out:"Debug/FreeCADGuiD.dll"
 # Begin Special Build Tool
 SOURCE="$(InputPath)"
-PostBuild_Cmds=xcopy       /y       /f       Debug\FreeCADGuiD.dll       ..\..\bin      	xcopy       /y       /f       Debug\FreeCADGuiD.lib       ..\..\lib\ 
+PostBuild_Cmds=xcopy        /y        /f        Debug\FreeCADGuiD.dll        ..\..\bin       	xcopy        /y        /f        Debug\FreeCADGuiD.lib        ..\..\lib\ 
 # End Special Build Tool
 
 !ENDIF 
@@ -2366,6 +2366,14 @@ SOURCE=.\SoFCDB.cpp
 # Begin Source File
 
 SOURCE=.\SoFCDB.h
+# End Source File
+# Begin Source File
+
+SOURCE=.\SoFCInteractiveElement.cpp
+# End Source File
+# Begin Source File
+
+SOURCE=.\SoFCInteractiveElement.h
 # End Source File
 # Begin Source File
 
